Removed many \ensuremath commands from math.sty

--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -311,8 +311,8 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
   \end{array}}
   \implies
   \brb{\begin{array}{F>{\ds}rc>{\ds}lD}
-       (1).&\ZSxx(z) &=& \ZSxx^\ast\brp{\frac{1}{z^\ast}}             & and
-     \\(2).&\ZSyx(z) &=& \ZSxy^\ast\brp{\frac{1}{z^\ast}}             &
+       (1).&\Szxx(z) &=& \Szxx^\ast\brp{\frac{1}{z^\ast}}             & and
+     \\(2).&\Szyx(z) &=& \Szxy^\ast\brp{\frac{1}{z^\ast}}             &
   \end{array}}
   }
 \end{theorem}
