Corrected 'LTI no input noise case' theorem; changed h(n) to H in some figures

--- a/common/math/graphics/system/sysHz_xy.tex
+++ b/common/math/graphics/system/sysHz_xy.tex
@@ -18,6 +18,7 @@
   \pnode(-1.50, 0.00) {sysX}%        signal input  label location
   \pnode(+1.50, 0.00) {sysY}%        signal output label location
   \fnodeput{0}{ 0}{ 0}{sysH}{$\ZH(z)$}%
+ %\fnodeput{0}{ 0}{ 0}{sysH}{$\fH$}%
     %       |   |  |   |       |____ label in box
     %       |   |  |   |____________ node name
     %       |   |  |________________ y location
