--- a/common/math/graphics/system/sysH_xyuvpq.tex
+++ b/common/math/graphics/system/sysH_xyuvpq.tex
@@ -19,7 +19,7 @@
   % | h(n)|
   % |_____|
   %-------------------------------------
-  \fnodeput{0}{ 0}{ 0}{sysH}{$\fh(n)$}%
+  \fnodeput{0}{ 0}{ 0}{sysH}{$\fH$}%
     %       |   |  |   |       |____ label in box
     %       |   |  |   |____________ node name
     %       |   |  |________________ y location
