--- a/common/math/graphics/system/sysHw_xy.tex
+++ b/common/math/graphics/system/sysHw_xy.tex
@@ -17,7 +17,7 @@
   %-------------------------------------
   \pnode(-1.50, 0.00) {sysX}%        signal input  label location
   \pnode(+1.50, 0.00) {sysY}%        signal output label location
-  \fnodeput{0}{ 0}{ 0}{sysH}{$\FH(\omega)$}%
+  \fnodeput{0}{ 0}{ 0}{sysH}{$\fH$}%
     %       |   |  |   |       |____ label in box
     %       |   |  |   |____________ node name
     %       |   |  |________________ y location
